--- a/public/admin/single-news.twig
+++ b/public/admin/single-news.twig
@@ -27,59 +27,52 @@
                      <td scope="row">{{ news.content }}</td>
                  </tr>
                  </tbody>
-         </table>#}{% for oneNews in news %}
+         </table>#}
         <div class="col-md-7 offset-2">
-            <a href="/dashboard" class="btn btn-light go-back" role="button">Go Back</a>
+            <a href="/news/news" class="btn btn-light go-back" role="button">News</a>
 
-        <div class="card card-outline-secondary NewsForm">
-            <div class="card-header">
-                <h3 class="mb-0 headingForm">Detalji Vesti</h3>
-            </div>
-            <!--card body-->
-            <div class="card-body">
-                <div class="form-group">
-                    <img src="{{ oneNews.images.url }}" class="w-100" alt="">
-
+            <div class="card card-outline-secondary NewsForm">
+                <div class="card-header">
+                    <h3 class="mb-0 headingForm">Detalji Vesti</h3>
                 </div>
                 <!--card body-->
                 <div class="card-body">
                     <div class="form-group">
-                        <img src="{{ oneNews.images.url }}" class="w-100" alt="picture">
+                        <img src="{{ news.images.url }}" class="w-100" alt="picture">
                     </div>
                     <div class="form-group">
                         <p><b>Naslov:</b></p>
-                        <p>{{ oneNews.title }}<span class="float-right">{{ oneNews.created|date("M/d/Y") }}</span></p>
+                        <p>{{ news.title }}<span class="float-right">{{ news.created|date("M/d/Y") }}</span></p>
                     </div>
                     <div class="form-group">
                         <hr>
                         <p><b>Tekst:</b></p>
-                        <p>{{ oneNews.content }}</p>
+                        <p>{{ news.content }}</p>
                     </div>
                     <div class="form-group">
                         <hr>
                         <p><b>Kategorija:</b></p>
-                        <p>{{ oneNews.category }}</p>
+                        <p>{{ news.category }}</p>
                     </div>
                     <div class="form-group">
                         <hr>
                         <p><b>Jezik:</b></p>
-                        <p>{{ oneNews.language }}</p>
+                        <p>{{ news.language }}</p>
                     </div>
                     <div class="admin-buttons">
                         <hr>
-                        <form action="/news/delete/{{ oneNews.id }}" method="post">
+                        <form action="/news/delete/{{ news.id }}" method="post">
                             <button type="submit" class="btn btn-danger float-right" role="button">Delete</button>
                         </form>
-                        <a href="/news/edit/{{ oneNews.id }}" class="btn btn-primary float-right" role="button">Edit</a>
+                        <a href="/news/edit/{{ news.id }}" class="btn btn-primary float-right" role="button">Edit</a>
                     </div>
-                </div>{% endfor %}
+                </div>
                 <!--/card-body-->
             </div>
+            <!--/card-body-->
         </div>
-        <!--/card-body-->
     </div>
-</div>
-<!-- end table -->
+    <!-- end table -->
 
 </div>
 
