--- a/public/admin/update-news.twig
+++ b/public/admin/update-news.twig
@@ -9,7 +9,7 @@
 
 
     <!-- form -->
-    <div class="container">{% for oneNew in news %}
+    <div class="container">
             <div class="col-md-7 offset-2">
             <a href="/news/news" class="btn btn-light go-back" role="button">News</a>
             <!-- form  -->
@@ -19,10 +19,10 @@
                 </div>
                 <!--card body-->
                 <div class="card-body">
-                    <form action="/image/delete/{{ oneNew.images.id }}" method="post">
+                    <form action="/image/delete/{{ news.images.id }}" method="post">
                         <div class="form-group">
 
-                            <img src="{{ oneNew.images.url }}" class="w-100" alt="">
+                            <img src="{{ news.images.url }}" class="w-100" alt="">
 
                         </div>
                         <div class="col-12 text-center mb-4">
@@ -31,30 +31,30 @@
 
                         </div>
                     </form>
-                    <form class="form" action="/news/update/{{ oneNew.id }}" method="POST" id="news-form">
+                    <form class="form" action="/news/update/{{ news.id }}" method="POST" id="news-form">
                         <div class="form-group">
                             <label for="title">Izmeni Naslov</label>
-                            <input type="text" class="form-control" name="title" value="{{ oneNew.title }}">
+                            <input type="text" class="form-control" name="title" value="{{ news.title }}">
                         </div>
                         <div class="form-group">
                             <label for="content">Izmeni Tekst</label>
                             <div class="row mb-1">
                                 <div class="col-lg-12">
                                     <textarea rows="9" name="content" id="content"
-                                              class="form-control">{{ oneNew.content }}</textarea>
+                                              class="form-control">{{ news.content }}</textarea>
                                 </div>
                             </div>
                         </div>
                         <div class="form-group">
                             <label for="category">Izaberi Kategoriju</label>
                             <select name="category" class="form-control">
-                                <option value="projekt"{% if oneNew.category == 'projekt' %} selected="selected" {% endif %}>
+                                <option value="projekt"{% if news.category == 'projekt' %} selected="selected" {% endif %}>
                                     projekt
                                 </option>
-                                <option value="blog"{% if oneNew.category == 'blog' %} selected="selected" {% endif %}>
+                                <option value="blog"{% if news.category == 'blog' %} selected="selected" {% endif %}>
                                     blog
                                 </option>
-                                <option value="vest"{% if oneNew.category == 'vest' %} selected="selected" {% endif %}>
+                                <option value="vest"{% if news.category == 'vest' %} selected="selected" {% endif %}>
                                     vest
                                 </option>
                             </select>
@@ -66,10 +66,10 @@
                         <div class="form-group">
                             <label for="language">Izaberi Jezik</label>
                             <select id="language" name="language" class="form-control">
-                                <option value="serbian"{% if oneNew.language == 'serbian' %} selected="selected" {% endif %}>
+                                <option value="serbian"{% if news.language == 'serbian' %} selected="selected" {% endif %}>
                                     serbian
                                 </option>
-                                <option value="english"{% if oneNew.language == 'english' %} selected="selected" {% endif %}>
+                                <option value="english"{% if news.language == 'english' %} selected="selected" {% endif %}>
                                     english
                                 </option>
                             </select>
@@ -81,7 +81,7 @@
                 <!--/card-body-->
             </div>
             <!-- /form -->
-            </div>{% endfor %}
+            </div>
     </div>
     <!-- end form -->
 
