--- a/public/admin/single-news.twig
+++ b/public/admin/single-news.twig
@@ -9,25 +9,11 @@
 
     <!-- table -->
     <div class="container">
-        {# <table class="table table-hover table-light">
-                 <thead>
-                 <tr>
-                     <th scope="col" class="admin-buttons">
-                         <form action="/news/delete/{{ news.id }}" method="post">
-                             <button type="submit" class="btn btn-danger float-right" role="button">Delete</button>
-                         </form>
-                         <a href="/news/edit/{{ news.id }}" class="btn btn-primary float-right" role="button">Edit</a>
-                         <span>{{ news.title }}</span>
-                         <span class="float-right" style="margin-right:5px;">{{ news.created|date("M/d/Y") }}</span>
-                     </th>
-                 </tr>
-                 </thead>
-                 <tbody>
-                 <tr>
-                     <td scope="row">{{ news.content }}</td>
-                 </tr>
-                 </tbody>
-         </table>#}
+        {% if message is defined %}
+            <div class="alert alert-success" role="alert">
+                <strong>Uporozenje!</strong> {{ message }}
+            </div>
+        {% endif %}
         <div class="col-md-7 offset-2">
             <a href="/news/news" class="btn btn-light go-back" role="button">News</a>
 
